Prevent double-tap zoom in on iPhone

--- a/leksagon.css
+++ b/leksagon.css
@@ -269,6 +269,7 @@ ul {
   font-size: .8em;
   border-radius:30px;
   cursor: pointer;
+  touch-action: manipulation;
 }
 
 .button:hover {
